--- a/About.html
+++ b/About.html
@@ -5,21 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Save the plannet conference</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Crete+Round&family=Inter:wght@100;200;300&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700&family=Roboto+Serif:wght@500&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="stylesheet" href="https://use.typekit.net/kix3hqc.css">
     <link rel="stylesheet" href="about.css" />
   </head>
   <body>
     <header class="header">
       <nav>
-      <ul class="nav-mobile">
-        <li><a href="#" class="link">Portfolio</a></li>
-        <li><a href="#about" class="link">About</a></li>
-        <li><a href="#" class="link">Contact</a></li>
+      <ul class="nav-mobile2">
+        <li><a href="index.html" class="link">Home</a></li>
       </ul>
       <div class="hamburger">
         <span class="lines"></span>
@@ -27,7 +20,7 @@
         <span class="lines"></span>
       </div>
       <ul class="nav-desktop">
-        <li><a href="#" class="desktop-items">About</a></li>
+        <li class="abt"><a href="#" class="desktop-items">About</a></li>
         <li><a href="#" class="desktop-items">Program</a></li>
         <li><a href="#" class="desktop-items">Join</a></li>
         <li><a href="#" class="desktop-items">Donate</a></li>
