--- a/index.html
+++ b/index.html
@@ -5,12 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Save the plannet conference</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Crete+Round&family=Inter:wght@100;200;300&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700&family=Roboto+Serif:wght@500&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="stylesheet" href="https://use.typekit.net/kix3hqc.css">
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -18,8 +13,8 @@
       <nav>
       <ul class="nav-mobile2">
         <li><a href="About.html" class="links">About</a></li>
-        <li><a href="#about" class="links">Programs</a></li>
-        <li><a href="#" class="links">Speakers</a></li>
+        <li><a href="#programs" class="links">Programs</a></li>
+        <li><a href="#speakers" class="links">Speakers</a></li>
       </ul>
       <div class="hamburger">
         <span class="lines"></span>
@@ -27,7 +22,7 @@
         <span class="lines"></span>
       </div>
       <ul class="nav-desktop">
-        <li><a href="About.html" class="desktop-items">About</a></li>
+        <li class="abt"><a href="About.html" class="desktop-items">About</a></li>
         <li><a href="#about" class="desktop-items">Program</a></li>
         <li><a href="#" class="desktop-items">Join</a></li>
         <li><a href="#" class="desktop-items">Donate</a></li>
@@ -65,7 +60,7 @@
         </div>
       </div>
     </div>
-        <div class="programs">
+        <div class="programs" id="programs">
           <div class="agenda">
           <h2>Agenda</h2> 
           <hr> 
@@ -101,10 +96,10 @@
               <img src="images/icon1.png" alt="" />
             </div>
             <div>
-              <h4>Goals settings</h4>
+              <h4>Goals</h4>
             </div>
             <div>
-              <p>Team goal setting and action list implementation in different countries
+              <p>Discussions of way forward from different delegates 
               </p>
           </div>          
           </div>
@@ -116,7 +111,7 @@
               <h4>Actions</h4>
             </div>
             <div>
-              <p>Have a look at key performance indicators and where we stand
+              <p>Key research outcomes from scients around globe
               </p>
           </div>          
           </div>
@@ -128,7 +123,7 @@
               <h4>Guests</h4>
             </div>
             <div>
-              <p>Listen to different speakers around the world share their thoughts
+              <p>Discussions of way forward from different delegates
               </p>
           </div>                 
           </div>
@@ -143,7 +138,7 @@
           </div>
         </div>
         </div>
-        <div class="container-speakers">
+        <div class="container-speakers" id="speakers">
         </div>      
         </section>
       </div>
