Corrected some elements in the programs

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <img src="images/icons8-user-48.png" alt="" />
           </div>
           <div>
-            <h4>cc Forum</h4>
+            <h4>cc Forum.</h4>
           </div>
           <div>
             <p>Discussions of way forward from different delegates 
@@ -96,10 +96,10 @@
               <img src="images/icon1.png" alt="" />
             </div>
             <div>
-              <h4>Goals</h4>
+              <h4>Goals.</h4>
             </div>
             <div>
-              <p>Discussions of way forward from different delegates 
+              <p>Discussions of way forward from delegates 
               </p>
           </div>          
           </div>
