Corrected simantics,added first desktop nav bar,corrected elements tages

--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
   </head>
   <body>
     <header class="header">
-      <nav>
+      <nav>   
+        <div class="div-top">   
+        <ul class="nav-part1">
+        <li><a href="#" class="links"><img src="images/facebook2.PNG"></a></li>
+        <li><a href="#" class="links"><img src="images/twitter7.PNG"></a></li>
+        <li><a href="#" class="links">English</a></li>
+        <li><a href="#" class="links">My Page</a></li>
+        <li><a href="#" class="links">Logout</a></li>
+        </ul>
+      </div> 
       <ul class="nav-mobile2">
         <li><a href="About.html" class="links">About</a></li>
         <li><a href="#programs" class="links">Programs</a></li>
@@ -27,7 +36,7 @@
         <li><a href="#" class="desktop-items">Join</a></li>
         <li><a href="#" class="desktop-items">Donate</a></li>
         <li><a href="#about" class="desktop-items">Chat</a></li>
-        <li><a href="#" class="desktop-items">Subscribe</a></li>
+        <li class="subscribe"><a href="#" class="desktop-items">Subscribe</a></li>
       </ul>
     </nav>
     <div class="my-logo">
@@ -39,10 +48,9 @@
     </div>
     </header>
     
-    <main class="main-home">
-      <div class="sub-main">
-        
+    <main class="main-home">       
       <section class="home-1">
+        <section class="top">
        <div class="part1">
         <div class="tittle">
           <h5>"All the human race"</h5>
@@ -58,15 +66,15 @@
           <h2>2024.12.17(FRI) ~ 20(MON)</h2>
           <p>@Kampala serena hotel, kampala </p>
         </div>
-      </div>
-    </div>
-        <div class="programs" id="programs">
+      </section>
+        <section class="middle programs" id="programs">
           <div class="agenda">
           <h2>Agenda</h2> 
           <hr> 
         </div>
         <section class="programs-container">
         <div class="all-programs">
+          <article>
           <div class="program1">
             <div>
               <img src="images/icon1.png" alt="" />
@@ -78,7 +86,9 @@
               <p>Key research outcomes from scients around globe
               </p>
           </div>          
-          </div>       
+          </div>  
+        </article>
+      <article>     
           <div class="program2">
             <div>
             <img src="images/icons8-user-48.png" alt="" />
@@ -91,6 +101,8 @@
             </p>
           </div>
           </div>
+        </article> 
+        <article> 
           <div class="program3">
             <div>
               <img src="images/icon1.png" alt="" />
@@ -103,6 +115,8 @@
               </p>
           </div>          
           </div>
+        </article> 
+        <article> 
           <div class="program4">
             <div>
               <img src="images/icons8-user-48.png" alt="" />
@@ -115,6 +129,8 @@
               </p>
           </div>          
           </div>
+        </article> 
+        <article> 
           <div class="program5">
             <div>
               <img src="images/icon1.png" alt="" />
@@ -127,6 +143,7 @@
               </p>
           </div>                 
           </div>
+        </article> 
         </div>
       </section>
       <div class="see-more">
@@ -137,12 +154,9 @@
             <p>Be part, Save the plannet 2024</p>
           </div>
         </div>
-        </div>
-        <div class="container-speakers" id="speakers">
-        </div>      
-        </section>
-      </div>
-        </div>
+      </section>
+        <section class="bottom container-speakers" id="speakers">
+        </section>      
       </section>
       <footer class="footer">
         <div class="sponsors">
